Update bid history